--- a/.env
+++ b/.env
@@ -2,4 +2,5 @@ PORT=5000
 MONGODB_URL=mongodb://127.0.0.1:27017/digitic
 JWT_SECRET=secret
 JWT_EXPIRATION=1d
-COOKIE_TOKEN_EXPIRATION=30000
+COOKIE_TOKEN_EXPIRATION=600000 # 10 minutes
+
